NewArchive/78e955028510575ad12394b4ada5c06a-7063104e283ed82d51a6fde7370c6e59/output
main.cpp: In function 'int main()':
main.cpp:26:42: error: cannot convert from base 'base' to derived type 'derive' via virtual base 'base'
   derive* der2 = static_cast<derive*>(der);
                                          ^
main.cpp:26:11: warning: unused variable 'der2' [-Wunused-variable]
   derive* der2 = static_cast<derive*>(der);
           ^
